PND-based code optimizations